# trend-meta-agent-harness

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cli/: main.py
configs/: config.json
docs/rfcs/: 001-architecture.md  README.md
services/: orchestrator.py
tests/integration/: test_pipeline.py
tests/unit/: __init__.py  test_core.py  test_runtime.py
